add trip model, controller and  routes

--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 PORT= 8000
-DB_MONGO_URI= mongodb://127.0.0.1:27017/booking
+NODE_ENV=development
+
+DB_MONGO_URI= mongodb://localhost:27017/booking
 
 # Database
 DB_PASSWORD=NTTBu562vd8GayaY
 DB_USER=mostafaayman
 DB_NAME=booking
 
-DB_URI=mongodb+srv://mostafaayman:NTTBu562vd8GayaY@cluster0.zm66uou.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DB_URI=mongodb+srv://mostafaelalfy_db_user:Mostafa789%40@cluster0.pheue4n.mongodb.net/
 
 
 JWT_SECRET_KEY=your-super-secret-jwt-key-here
