feat:added collections

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_PASSWORD=NTTBu562vd8GayaY
 DB_USER=mostafaayman
 DB_NAME=booking
 
-DB_URI=mongodb+srv://mostafaelalfy_db_user:Mostafa789%40@cluster0.pheue4n.mongodb.net/
+DB_URI=mongodb+srv://yousefebada6464:M4fWt$$wBthAVQR@cluster0.dcl2b.mongodb.net/booking-db?retryWrites=true&w=majority&appName=Cluster0
 
 
 JWT_SECRET_KEY=your-super-secret-jwt-key-here
