--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
@@ -23,7 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.6",
     "slugify": "^1.6.6",
     "uuid": "^11.1.0"
   },
